# room_type_classifier

./: .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  justfile  pyproject.toml
models/convnext_nano/: best_metrics.json  convnext_nano_metrics.json  model.py  train_convnext.py
models/convnext_tiny/: __init__.py  infer_convnext_tiny.py  model.py  train_config.json  train_convnext_tiny.py
models/densenet121/: train_densenet121.py
models/efficientNet/: README.md  grad_cam.py  train_efficientnet.py
models/efficientNet/artifacts/: efficientnet_b0_metrics.json  efficientnet_b1_metrics.json  model_comparison.csv
models/efficientNet/artifacts/grad_cam/: 14443810553_b1_target_12_metadata.json
models/resnet18/: train_resnet18.py
models/resnet50/: resnet50.py
models/yolo/: main_yolo.py
reports/metrics/convnext_tiny/: convnext_tiny_epoch_history.jsonl  convnext_tiny_experiments.json  convnext_tiny_metrics.json
reports/metrics/densenet121/: densenet121_classification_report.json  densenet121_classification_report.txt  densenet121_experiments.json  densenet121_metrics.json
reports/metrics/resnet18/: resnet18_experiments.json  resnet18_metrics.json
src/: compare_mlflow_models.py  dataloaders.py  device.py  metrics.py  mlflow_utils.py  preprocess_data.py  training_helpers.py  validate_training_outputs.py
streamlit/: Dockerfile  README.md  app.py
